--- a/harkirat-singh-assignments-cohort-3.0/week-1/problems/0-horizontal-align/index.html
+++ b/harkirat-singh-assignments-cohort-3.0/week-1/problems/0-horizontal-align/index.html
@@ -9,7 +9,7 @@
     <style>
         .container {
             width: 1200px;
-            /* margin: 0px auto; */
+            margin: 0 auto;
             background-color: red;
         }
 
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div style="display: flex; justify-content: center;">
+    <div>
         <div class="container">
             <div class="content">
                 <h1>Hello World</h1>
