--- a/harkirat-singh-assignments-cohort-3.0/week-1/problems/1-vertical-align/index.html
+++ b/harkirat-singh-assignments-cohort-3.0/week-1/problems/1-vertical-align/index.html
@@ -9,13 +9,17 @@
     <style>
         .container {
             width: 1200px;
+            height: 500px;
             margin: 0 auto;
             background-color: red;
         }
         .content {
             height: 500px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        .vertical-center {
+        /* .vertical-center {
             display: flex;
             justify-content: center;
             height: 100%;
@@ -23,18 +27,18 @@
         }
         .horizontal-center {
             margin: 0 auto;
-        }
+        } */
     </style>
 </head>
 
 <body>
     <div class="container">
         <div class="content">
-            <div class="vertical-center" style="background-color: yellow;">
-                <div class="horizontal-center">
+            <!-- <div class="vertical-center"> -->
+                <!-- <div class="horizontal-center"> -->
                     <h1>Hello World</h1>
-                </div>
-            </div>
+                <!-- </div> -->
+            <!-- </div> -->
         </div>
     </div>
 </body>
