--- a/harkirat-singh-cohort-3.0/week-02/practise/index.html
+++ b/harkirat-singh-cohort-3.0/week-02/practise/index.html
@@ -4,9 +4,10 @@
     <!-- <link rel="stylesheet" href="index.js"> -->
   </head>
   <body>
-    <button onclick="getPrimes()">Generate Prime Numbers</button>
-    <button onclick="printMessage()">Print Messages</button>
-    <div id="demo"></div>
+    <!-- <button onclick="getPrimes()">Generate Prime Numbers</button>
+    <button onclick="printMessage()">Print Messages</button> -->
+    <!-- <div id="demo"></div>  -->
+     <div id="output"></div>
     <script src="index.js"></script>
   </body>
 </html>
